--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,14 +22,15 @@ main {
   justify-content: center;
   padding: 0 1em 1em 1em;
   box-sizing: border-box;
-  min-height: 100vh;
+  min-height: calc(100vh - 180px);
 }
 
 
 section {
   box-sizing: border-box;
-  min-height: 100vh;
-  padding: 0 0 0 34px;
+  height: 100%;
+  padding: 0;
+  min-height: calc(100vh - 180px);
 }
 
 .container section:nth-child(1) {
@@ -43,10 +44,6 @@ section {
   flex-basis: 100%;
   width: 100%;
   max-width: 100%;  
-}
-
-.half {
-
 }
 
 .container section.half:nth-child(1) {
